<resources>
    <string name="app_name">Notification Hubs Sample</string>
    <string name="tab_text_1">Setup</string>
    <string name="tab_text_2">Notifications</string>
    <string name="device_token_label">Device Token:</string>
    <string name="installation_id_label">Installation ID:</string>
    <string name="unknown_information">Unknown</string>
    <string name="tags_label">Tags:</string>
    <string name="add_tag_button">Add Tag</string>
    <string name="invalid_tag_message">Invalid Tag</string>
    <string name="notification_title_label">Title:</string>
    <string name="notification_body_label">Message:</string>
    <string name="notification_data_label">Data:</string>
    <string name="notification_data_cardinality_label">Data Field Count:</string>
    <string name="notification_received_message">Notification Received</string>
    <string name="enabled_label">Enabled:</string>
    <string name="installation_saved_message">Installation Updated</string>
    <string name="installation_save_failure_message">Installation Update Failed</string>
</resources>
